# RUSTful-API

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
src/: index.html  main.rs
src/styles/: index.js  input.css  output.css
