[package]
name = "REST"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-files = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.9.2"
rustls = "0.23.31"
rustls-pemfile = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
